fix overflow in carousel

--- a/src/assets/css/carousel.css
+++ b/src/assets/css/carousel.css
@@ -53,7 +53,8 @@
   overflow-x: auto;
   position: relative;
   /* height: 85vh; */
-  height: 750px;
+  /* height: 750px; */
+  height: 820px;
 }
 .btns-container {
   display: flex;
